a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Haitong_Yang/invalid1.min
#incompatible assignment type
var x : int;
x = 3.14;
